[package]
name = "ggj_2k33"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9.1", default-features = false, features = ["render",
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher"]}
bevy_editor_pls = "0.2"
bevy_kira_audio = {version = "0.13.0", features = ["ogg"]}
rand = "0.8"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
